--- a/solupoint/Views/Home/CashPoint.cshtml
+++ b/solupoint/Views/Home/CashPoint.cshtml
@@ -106,7 +106,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="py-5 bg-light" data-aos="fade-up">
+    @*<section id="contact" class="py-5 bg-light" data-aos="fade-up">
         <div class="container">
             <h2 class="text-center mb-4">Contattaci</h2>
             <form method="post" action="/Home/SendContact">
@@ -118,7 +118,7 @@
                 <div class="text-center mt-3"><button type="submit" class="btn btn-primary btn-lg shadow">Invia Messaggio</button></div>
             </form>
         </div>
-    </section>
+    </section>*@
 
 
     <section id="faq" class="container py-5">
