--- a/solupoint/Views/Shared/_Layout.cshtml
+++ b/solupoint/Views/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
     <title>Solupoint</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-ZB+RM3F8...=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
