--- a/solupoint/Views/Home/Faq.cshtml
+++ b/solupoint/Views/Home/Faq.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Domande Frequenti - FAQ";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <main class="container py-4">
