--- a/solupoint/Views/Home/Prodotti.cshtml
+++ b/solupoint/Views/Home/Prodotti.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewBag.Title = "Articoli";
     ViewBag.Message = "I nostri prodotti";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 <main aria-labelledby="title" style="font-family: Arial, sans-serif; max-width: 1200px; margin: 0 auto; padding: 2rem;">
     <h2 id="title" style="font-size: 2rem; color: #2c3e50; margin-bottom: 0.5rem; text-align: center;">@ViewBag.Message</h2>
