--- a/solupoint/Views/Home/Contact.cshtml
+++ b/solupoint/Views/Home/Contact.cshtml
@@ -16,7 +16,7 @@
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="bg-light rounded shadow p-4">
                 <h4 class="text-primary mb-3">📍 Azienda</h4>
-                <p><strong>CashPoint - Soluzioni Digitali</strong></p>
+                <p><strong>Soluzioni Integrate</strong></p>
 
                 <h4 class="text-primary mt-4 mb-2">🧾 Partita IVA</h4>
                 <p>P.IVA 04133214002</p>
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div class="col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
+        @*<div class="col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="bg-white rounded shadow p-4">
                 <h4 class="text-primary mb-3">✉️ Scrivici un messaggio</h4>
                 <form method="post" action="/Home/SendContact">
@@ -48,7 +48,7 @@
                     <button type="submit" class="btn btn-primary btn-lg w-100 shadow">Invia</button>
                 </form>
             </div>
-        </div>
+        </div>*@
     </div>
 </section>
 
